--- a/public/styles.css
+++ b/public/styles.css
@@ -6,3 +6,19 @@
      display: inline-block;
      margin: 10px; 
  }
+
+ .user-box {
+     margin-bottom: 20px;
+     background-color:  #333;
+     padding: 10px; 
+     color: #ffffff;
+     transform: scale(1);
+     transition: all 2s;
+     border-radius: 5px;
+ }
+
+
+ .user-box:hover {
+     color: green;
+    transform: scale(0.9);
+}
